@@ -1,3 +1,3 @@
 Tests: lbdb-testsuite
 Restrictions: rw-build-tree
-Depends: @, debhelper
+Depends: @, debhelper, abook
