@@ -1,0 +1,3 @@
+lbdbq: 2 matches
+foo1@example.com	First1 Family1	abook
+foo1@example.net	First1 Family1	abook
